flying demo completed

--- a/GLTFLoader_test/GLTF_demo.html
+++ b/GLTFLoader_test/GLTF_demo.html
@@ -11,7 +11,8 @@
         <script src="https://cdn.jsdelivr.net/npm/three/examples/js/loaders/GLTFLoader.js"></script>
 	</head>
 	<body>
-        <script src="./GLTF_demo.js"></script>
+        <!-- <script src="./GLTF_demo.js"></script> -->
+        <script src="./GLTF_flying_demo.js"></script>
         <!-- <script src="./demo.js"></script> -->
         <!-- <script src="./falling-cubes.js"></script> -->
 	</body>
